added data folder

--- a/COMP003B.LectureActivity6/COMP003B.LectureActivity6.csproj
+++ b/COMP003B.LectureActivity6/COMP003B.LectureActivity6.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>f038b18f-8897-4fb3-858e-2770d0777383</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
